log in route set up

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ sqlalchemy = "*"
 flask-cors = "*"
 flask-bcrypt = "*"
 marshmallow = "*"
+pylint = "*"
+pyjwt = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
